Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-12898

building lustre utils on ppc64le fails with error format expects llu but argument is __u64

XMLWordPrintable

    • 3
    • 9223372036854775807

      Several utilities fail to build with errors like this one:

      BUILDSTDERR: libmount_utils_zfs.c: In function 'zfs_mkfs_opts':
      BUILDSTDERR: libmount_utils_zfs.c:573:5: error: format '%llu' expects argument of type 'long long unsigned int', but argument 4 has type '__u64' [-Werror=format=]
      BUILDSTDERR:      mop->mo_device_kb * 1024);
      

      utilities affected:

      lustre/utils/ll_decode_filter_fid.c
      lustre/utils/llog_reader.c
      lustre/utils/lr_reader.c
      lustre/utils/lsnapshot.c
      lustre/utils/lustre_lfsck.c
      

            ofaaland Olaf Faaland
            ofaaland Olaf Faaland
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: